# opt-mitra

./: .gitignore
mitrarr_clean/: .gitignore  Makefile  README.md  pyproject.toml
mitrarr_clean/configs/: schedule_template.json
mitrarr_clean/core/: __init__.py  exceptions.py
mitrarr_clean/core/entities/: __init__.py  nist.py  relationship.py
mitrarr_clean/core/interfaces/: __init__.py  gateways.py  repositories.py
mitrarr_clean/core/use_cases/: __init__.py  register_nist.py  send_to_findface.py  sync_relationships.py
mitrarr_clean/docs/: migration_plan.md
mitrarr_clean/infra/: __init__.py  container.py
mitrarr_clean/infra/api/: __init__.py  server.py
mitrarr_clean/infra/auto_recovery/: __init__.py  retry_runner.py
mitrarr_clean/infra/cli/: __init__.py  main.py
mitrarr_clean/infra/gateways/: __init__.py  findface_log.py
mitrarr_clean/infra/monitoring/: __init__.py  alerts.py  cron_guardian.py  heartbeats.py  volume_guard.py
mitrarr_clean/infra/repositories/: __init__.py  nist_json.py  relationships_json.py
mitrarr_clean/infra/scheduler/: __init__.py  runner.py
mitrarr_clean/tests/: conftest.py
mitrarr_clean/tests/core/entities/: test_nist.py  test_relationship.py
mitrarr_clean/tests/core/use_cases/: test_register_nist.py  test_send_to_findface.py  test_sync_relationships.py
mitrarr_clean/tests/docs/: test_migration_plan.py
mitrarr_clean/tests/infra/api/: test_scheduler_api.py
mitrarr_clean/tests/infra/auto_recovery/: test_retry_runner.py
mitrarr_clean/tests/infra/cli/: test_main.py
mitrarr_clean/tools/: bootstrap.sh
(+139 files in other folders)
